assets/css/style.css
h1 {
  text-align: center;
  font-family: 'Playfair Display SC', serif;
}

.title {
  font-size: 60px;
}

.card {
  margin-bottom: 15px;
}

@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 900px)  {

	table, thead, tbody, th, td, tr { 
		display: block; 
	}
	
	thead tr { 
		position: absolute;
		top: -9999px;
		left: -9999px;
	}
	
	tr { border: 1px solid #ccc; }
	
	td { 
		/* Behave  like a "row" */
		border: none;
		border-bottom: 1px solid #eee; 
		position: relative;
		padding-left: 50%; 
	}

